--- a/CódigoFuente/BitacorasProduccion/Views/Home/ErrorGenerico.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Home/ErrorGenerico.cshtml
@@ -17,10 +17,10 @@
                     <div class="col-md-12 ">
                         <div class="error-text">
                             <h1 class="error text-danger"> <i class="fa fa-ban" aria-hidden="true"></i></h1>
-                            <h4 class="text-danger">¡Lo sentimos! ¡No tiene los permisos suficientes!</h4>
-                            <p class="text-danger">Contacte al administrador del sitio para solicitar los permisos para acceder a esta secci&oacute;n.</p>
+                            <h4 class="text-danger">@ViewBag.Titulo</h4>
+                            <p class="text-danger">@ViewBag.Descripcion</p>
 
-                            <a href="@Url.Action( "Index", "Home")" class="btn btn-warning btn-round">Volver al inicio</a>
+                            <a onclick="javascript:history.go(-1)" class="btn btn-warning btn-round">Volver</a>
                         </div>
                     </div>
                 </div>
