--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/DatosEntradas.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/DatosEntradas.cshtml
@@ -95,9 +95,9 @@
                                 <div class="card-box ">
                                     <dl class="row">
                                         <dt class="col-sm-2">@Html.DisplayNameFor(model => model.id_supervisor)</dt>
-                                        <dd class="col-sm-10">@Model.produccion_supervisores.empleados.nombre&ensp;@Model.produccion_supervisores.empleados.apellido1&ensp;@Model.produccion_supervisores.empleados.apellido2</dd>
+                                        <dd class="col-sm-10">@Model.produccion_supervisores.empleados.ConcatNombre</dd>
                                         <dt class="col-sm-2">@Html.DisplayNameFor(model => model.id_operador)</dt>
-                                        <dd class="col-sm-10">@Model.produccion_operadores.empleados.nombre&ensp;@Model.produccion_operadores.empleados.apellido1&ensp;@Model.produccion_operadores.empleados.apellido2</dd>
+                                        <dd class="col-sm-10">@Model.produccion_operadores.empleados.ConcatNombre</dd>
                                         <dt class="col-sm-2">Planta</dt>
                                         <dd class="col-sm-2">@Html.DisplayFor(model => model.plantas.descripcion)</dd>
                                         <dt class="col-sm-2">@Html.DisplayNameFor(model => model.id_linea)</dt>
@@ -373,7 +373,7 @@
 
                                 </div>
                                 <div class="col-md-7">
-                                    <input id="modal_button" type="button" value="Captura Manual" class="btn btn-round btn-warning float-right" onclick="mostrarModal(); return false;">
+                                    <input id="modal_button" type="button" value="Captura Manual" class="btn btn-round btn-warning float-right" onclick="mostrarModalPass(); return false;">
                                 </div>
                             </div>
 
@@ -561,7 +561,7 @@
             <div class="modal-body">
                 <div class="form-group row">
                     <!--Peso Báscula Manual-->
-                    <label class="control-label col-md-5" for="peso_bruto_kgs">
+                    <label class="control-label col-md-5" for="peso_manual">
                         Peso Real Pieza Neto
                     </label>
                     <div class="col-md-7">
@@ -574,6 +574,38 @@
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
                 <button id="aceptar_modal_sencilla" type="button" class="btn btn-primary" onclick="ocultarModal(1)" disabled>Sencilla</button>
                 <button id="aceptar_modal_doble" type="button" class="btn btn-primary" onclick="ocultarModal(2)" disabled>Doble</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Password Supervisor -->
+<div class="modal fade" id="modalPass" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Autorizaci&oacute;n Supervisor</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group row">
+                    <label class="control-label col-md-12">
+                        @Model.produccion_supervisores.empleados.ConcatNombre
+                    </label>
+                    <!--PASSWORD-->
+                    <label class="control-label col-md-3" for="password">
+                        Contraseña:
+                    </label>
+                    <div class="col-md-9">
+                        <input  type="password" id="password" class="form-control col-md-12" style="text-align: left" value="" autocomplete="off">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                <button id="aceptar_pass" type="button" class="btn btn-primary" onclick="verificarContraseña(@Model.produccion_supervisores.id_empleado)">Continuar</button>
             </div>
         </div>
     </div>
