--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionResultado/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionResultado/Index.cshtml
@@ -91,7 +91,7 @@
                                             <div class="form-group row ">
                                                 <label class="control-label col-md-2 col-sm-2" for="planta">Planta</label>
                                                 <div class="col-md-6 col-sm-6 ">
-                                                    @Html.DropDownList("clave_planta", null, "-- Seleccione un valor --", htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%", @required = "required" })
+                                                    @Html.DropDownList("clave_planta", null,  htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%", @required = "required" })
                                                 </div>
 
                                             </div>
@@ -100,7 +100,6 @@
                                                 <div class="col-md-6 col-sm-6 ">
                                                     @Html.DropDownList("id_linea", null, "-- Seleccione un valor --", htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
                                                 </div>
-
                                             </div>
                                             <div class="form-group row ">
                                                 <label class="control-label col-md-2 col-sm-2" for="fecha_inicial">Fecha Inicial</label>
