--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -101,7 +101,7 @@
                                         </li>
                                     }
 
-                                    @if (User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_CATALOGOS) || User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_REGISTRO))
+                                    @if (User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_CATALOGOS) || User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_REGISTRO) || User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_REPORTE))
                                     {
                                         <li class="@(ViewBag.PrimerNivel == "bitacoras_produccion" ? "active" : null )">
                                             <a><i class="fa fa-tasks"></i> Producci&oacute;n<span class="fa fa-chevron-down"></span></a>
