--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -109,10 +109,12 @@
 
                                                 @if (User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_REGISTRO))
                                                 {
-                                                    <li class="@(ViewBag.SegundoNivel == "produccion_registros" ? "current-page" : null )"><a href="@Url.Action("Index", "ProduccionRegistros")">Bit&aacute;cora</a></li>                                                   
+                                                    <li class="@(ViewBag.SegundoNivel == "produccion_registros" ? "current-page" : null )"><a href="@Url.Action("Index", "ProduccionRegistros")">Bit&aacute;cora</a></li>
+                                                    <li class="@(ViewBag.SegundoNivel == "produccion_respaldo" ? "current-page" : null )"><a href="@Url.Action("CargarRespaldo", "ProduccionRegistros")">CargarRespaldo</a></li>
+
                                                 }
                                                 @if (User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_REPORTE))
-                                                {                                                    
+                                                {
                                                     <li class="@(ViewBag.SegundoNivel == "produccion_reporte" ? "current-page" : null )"><a href="@Url.Action("Index", "ProduccionResultado")">Reporte de Producci&oacute;n</a></li>
                                                 }
                                                 @if (User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_CATALOGOS))
