2021-11-12 Se agrega funcion para seleccionar bitacora de respaldo

--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/CargarRespaldo.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/CargarRespaldo.cshtml
@@ -6,6 +6,23 @@
     ViewBag.SegundoNivel = "produccion_respaldo";
     ViewBag.ControllerName = "ProduccionRegistros";
 
+    Clases.Util.MensajesSweetAlert mensajeAlerta = (Clases.Util.MensajesSweetAlert)ViewBag.MensajeAlert;
+
+}
+
+@section estilos
+{
+
+    <!-- SweetAlert2 -->
+    <link href="@Url.Content("~/Content/vendors/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css")" rel="stylesheet">
+
+}
+
+@*Para SweetAlert*@
+@if (mensajeAlerta != null)
+{
+    <input type="hidden" value="@mensajeAlerta.Mensaje" id="mensajeAlert" />
+    <input type="hidden" value="@mensajeAlerta.getTipoMensaje()" id="mensajeAlertTipo" />
 }
 
 <div class="right_col" role="main">
@@ -79,3 +96,11 @@
         </div>
     </div>
 </div>
+@section scripts
+{
+  
+    <!-- SweetAlert2 -->
+    @Scripts.Render(Url.Content("~/Content/vendors/sweetalert2/sweetalert2.min.js"))
+    @Scripts.Render(Url.Content("~/Scripts/AlertasSweetAlert.js"))   
+
+}
