--- a/CódigoFuente/BitacorasProduccion/Views/PremiumFreightApproval/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PremiumFreightApproval/Create.cshtml
@@ -177,7 +177,7 @@
                                 </div>
 
                                 <label class="control-label col-md-2">
-                                    Total Coast to Recover (usd)
+                                    Total Cost to Recover (usd)
                                 </label>
                                 <div class="col-md-2">
                                     <input type="text" id="total_coast_to_recover" name="total_coast_to_recover" class="form-control col-md-12" style="text-align: right;" value="" readonly>
