--- a/CódigoFuente/BitacorasProduccion/Views/PremiumFreightApproval/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PremiumFreightApproval/Details.cshtml
@@ -10,12 +10,24 @@
 
 }
 
+@section estilos
+{
+  
+    <style>
+        label {
+            text-align: right;
+        }
+
+            label::after {
+                content: ":";
+            }
+    </style>
+}
+
 <div class="right_col" role="main">
     <div class="">
         <div class="page-title">
-            <div class="title_left">
-                <h3>Detalles del turno</h3>
-            </div>
+
         </div>
 
         <div class="clearfix"></div>
@@ -27,78 +39,222 @@
                         <h2>@ViewBag.Title</h2>
                         <div class="clearfix"></div>
                     </div>
+                    <div class="x_content">
+                        <br />
 
-                    <!-- /.col -->
-                    <div class="col-md-8">
-                        <div class="table-responsive">
-                            <table class="table">
-                                <tbody>
-                                    <tr>
-                                        <th>@Html.DisplayNameFor(model => model.id)</th>
-                                        <td>@Html.DisplayFor(model => model.id)</td>
-                                    </tr>
-                                    <tr>
-                                        <th>@Html.DisplayNameFor(model => model.id_solicitante)</th>
-                                        <td>@Html.DisplayFor(model => model.empleados1.ConcatNombre)</td>
-                                    </tr>
-                                    <tr>
-                                        <th>@Html.DisplayNameFor(model => model.id_PFA_reason)</th>
-                                        <td>@Html.DisplayFor(model => model.PFA_Reason.descripcion)</td>
-                                    </tr>
-                                    <tr>
-                                        <th>@Html.DisplayNameFor(model => model.id_PFA_type_shipment)</th>
-                                        <td>@Html.DisplayFor(model => model.PFA_Type_shipment.descripcion)</td>
-                                    </tr>
-                                    <tr>
-                                        <th>@Html.DisplayNameFor(model => model.id_PFA_responsible_cost)</th>
-                                        <td>@Html.DisplayFor(model => model.PFA_Responsible_cost.descripcion)</td>
-                                    </tr>
-                                    <tr>
-                                        <th>@Html.DisplayNameFor(model => model.total_pf_cost)</th>
-                                        <td>@Html.DisplayFor(model => model.total_pf_cost)</td>
-                                    </tr>
-                                    <tr>
-                                        <th>@Html.DisplayNameFor(model => model.total_cost)</th>
-                                        <td>@Html.DisplayFor(model => model.total_cost)</td>
-                                    </tr>
-                                    <tr>
-                                        <th>Total Coast To Recover</th>
-                                        <td>@Model.TotalCostToRecover</td>
-                                    </tr>
-                                    <tr>
-                                        <th>@Html.DisplayNameFor(model => model.id_PFA_recovered_cost)</th>
-                                        <td>@Html.DisplayFor(model => model.PFA_Recovered_cost.descripcion)</td>
-                                    </tr>
-                                    <tr>
-                                        <th>@Html.DisplayNameFor(model => model.promise_recovering_date)</th>
-                                        <td>@Html.DisplayFor(model => model.promise_recovering_date)</td>
-                                    </tr>
-                                    <tr>
-                                        <th>@Html.DisplayNameFor(model => model.id_PFA_autorizador)</th>
-                                        <td>@Html.DisplayFor(model => model.empleados.ConcatNombre)</td>
-                                    </tr>
-                                    <tr>
-                                        <th>@Html.DisplayNameFor(model => model.estatus)</th>
-                                        <td>@Html.DisplayFor(model => model.estatus)</td>
-                                    </tr>
+                        <div class="form-group row">
+                            <!--Estado-->
+                            <label class="control-label col-md-10 float-right">
+                                <b>Status</b>
+                            </label>
+                            <div class="col-md-2">
+                                @switch (Model.estatus)
+                                {
+                                    case Bitacoras.Util.PFA_Status.APROBADO:
+                                        <input type="button" class="form-control col-md-12" style="text-align: right; background: rgb(200 255 200); font-weight: bold" value="@Model.estatus" readonly>
+                                        break;
+                                    case Bitacoras.Util.PFA_Status.RECHAZADO:
+                                        <input type="button" class="form-control col-md-12" style="text-align: right; background: rgb(255 200 200); font-weight: bold" value="@Model.estatus" readonly>
+                                        break;
+                                    case Bitacoras.Util.PFA_Status.ENVIADO:
+                                        <input type="button" class="form-control col-md-12" style="text-align: right; background: rgb(101 203 245); font-weight: bold" value="@Model.estatus" readonly>
+                                        break;
+                                    case Bitacoras.Util.PFA_Status.FINALIZADO:
+                                        <input type="button" class="form-control col-md-12" style="text-align: right; background: rgb(255 255 180); font-weight: bold" value="@Model.estatus" readonly>
+                                        break;
+                                    default:
+                                        <input type="button" class="form-control col-md-12" style="text-align: right; background: rgb(240 240 240); font-weight: bold" value="@Model.estatus" readonly>
+                                        break;
 
+                                }
 
-                                </tbody>
-                            </table>
+                            </div>
+                                
+                      
+
                         </div>
+                        <div class="ln_solid"></div>
+                        <div class="form-group row">
+                            @Html.LabelFor(model => model.id_solicitante, new { @class = "control-label col-md-1" })
+                            <input type="text" class="form-control col-md-4" value="@Model.empleados1.ConcatNombre" readonly>
+                            <!--Request date-->
+                            <label class="control-label col-md-2 float-right">
+                                Date of Request
+                            </label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control col-md-12" style="text-align: right;" value="@Model.date_request.ToString("yyyy-MM-dd")" readonly>
+                            </div>
+                            <!--ID Solicitud-->
+                            <label class="control-label col-md-2 float-right">
+                                Number of PFA
+                            </label>
+                            <div class="col-md-1">
+                                <input type="text" class="form-control col-md-12" style="text-align: right;" value="@Model.id" readonly>
+                            </div>
+                        </div>
+
+
+                        <div class="ln_solid"></div>
+                        <div class="form-group row">
+                            <span style="color:black"><b>DEPARTMENT</b></span>
+                        </div>
+                        <div class="form-group row">
+
+                            @Html.LabelFor(model => model.id_PFA_Department, new { @class = "control-label col-md-1" })
+                            <div class="col-md-3">
+                                <input type="text" class="form-control col-md-12" value="@Model.PFA_Department.descripcion" readonly>
+                            </div>
+                            @Html.LabelFor(model => model.mill, new { @class = "control-label col-md-1" })
+                            <div class="col-md-3">
+                                <input type="text" class="form-control col-md-12" value="@Model.mill" readonly>
+
+                            </div>
+                            @Html.LabelFor(model => model.customer, new { @class = "control-label col-md-1" })
+                            <div class="col-md-3">
+                                <input type="text" class="form-control col-md-12" value="@Model.customer" readonly>
+                            </div>
+                        </div>
+                        <div class="ln_solid"></div>
+                        <div class="form-group row">
+                            <span style="color:black"><b>SAP</b></span>
+                        </div>
+                        <div class="form-group row">
+                            @Html.LabelFor(model => model.sap_part_number, new { @class = "control-label col-md-1" })
+                            <div class="col-md-3">
+                                <input type="text" class="form-control col-md-12" value="@Model.sap_part_number" readonly>
+                            </div>
+                            @Html.LabelFor(model => model.customer_part_number, new { @class = "control-label col-md-1" })
+                            <div class="col-md-3">
+                                <input type="text" class="form-control col-md-12" value="@Model.customer_part_number" readonly>
+                            </div>
+                            @Html.LabelFor(model => model.volume, new { @class = "control-label col-md-1" })
+                            <div class="col-md-2">
+                                <input type="text" class="form-control col-md-12" value="@Model.volume" readonly>
+                            </div>
+                            <div class="col-md-1">
+                                <input type="text" class="form-control col-md-12" value="@Model.PFA_Volume.descripcion" readonly>
+                            </div>
+                        </div>
+                        <div class="ln_solid"></div>
+                        <div class="form-group row">
+                            <span style="color:black"><b>DESTINATION</b></span>
+                        </div>
+                        <div class="form-group row">
+                            @Html.LabelFor(model => model.id_PFA_border_port, new { @class = "control-label col-md-1" })
+                            <div class="col-md-3">
+                                <input type="text" class="form-control col-md-12" value="@Model.PFA_Border_port.descripcion" readonly>
+                            </div>
+                            @Html.LabelFor(model => model.id_PFA_destination_plant, new { @class = "control-label col-md-2" })
+                            <div class="col-md-3">
+                                <input type="text" class="form-control col-md-12" value="@Model.PFA_Destination_plant.descripcion" readonly>
+                            </div>
+                        </div>
+
+                        <div class="ln_solid"></div>
+                        <div class="form-group row">
+                            <span style="color:black"><b>PREMIUM FREIGHT</b></span>
+                        </div>
+                        <div class="form-group row">
+                            @Html.LabelFor(model => model.id_PFA_reason, new { @class = "control-label col-md-1" })
+                            <div class="col-md-3">
+                                <input type="text" class="form-control col-md-12" value="@Model.PFA_Reason.descripcion" readonly>
+                            </div>
+                            @Html.LabelFor(model => model.id_PFA_type_shipment, new { @class = "control-label col-md-1" })
+                            <div class="col-md-3">
+                                <input type="text" class="form-control col-md-12" value="@Model.PFA_Type_shipment.descripcion" readonly>
+                            </div>
+                            @Html.LabelFor(model => model.id_PFA_responsible_cost, new { @class = "control-label col-md-1" })
+                            <div class="col-md-3">
+                                <input type="text" class="form-control col-md-12" value="@Model.PFA_Responsible_cost.descripcion" readonly>
+                            </div>
+                        </div>
+
+                        <div class="ln_solid"></div>
+                        <div class="form-group row">
+                            <span style="color:black"><b>COST</b></span>
+                        </div>
+                        <div class="form-group row">
+                            @Html.LabelFor(model => model.total_pf_cost, new { @class = "control-label col-md-2" })
+                            <div class="col-md-2">
+                                <input type="text" class="form-control col-md-12" value="@Model.total_pf_cost" readonly>
+                            </div>
+                            @Html.LabelFor(model => model.total_cost, new { @class = "control-label col-md-2" })
+                            <div class="col-md-2">
+                                <input type="text" class="form-control col-md-12" value="@Model.total_cost" readonly>
+                            </div>
+
+                            <label class="control-label col-md-2">
+                                Total Coast to Recover (usd)
+                            </label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control col-md-12" value="@Model.TotalCostToRecover" readonly>
+                            </div>
+                        </div>
+
+                        <div class="ln_solid"></div>
+                        <div class="form-group row">
+                            <span style="color:black"><b>INFO RECORVERED</b></span>
+                        </div>
+                        <div class="form-group row">
+                            @Html.LabelFor(model => model.id_PFA_recovered_cost, new { @class = "control-label col-md-1" })
+                            <div class="col-md-3">
+                                <input type="text" class="form-control col-md-12" value="@Model.PFA_Recovered_cost.descripcion" readonly>
+                            </div>
+                            @Html.LabelFor(model => model.promise_recovering_date, new { @class = "control-label col-md-1" })
+                            <div class="col-md-3">
+                                <input type="text" class="form-control col-md-12" value="@Model.promise_recovering_date.ToString("yyyy-MM-dd")" readonly>
+                            </div>
+                        </div>
+
+                        <div class="ln_solid"></div>
+                        <div class="form-group row">
+                            <span style="color:black"><b>AUTHORIZER</b></span>
+                        </div>
+                        <div class="item form-group">
+                            @Html.LabelFor(model => model.id_PFA_autorizador, new { @class = "control-label col-md-1" })
+                            <div class="col-md-6">
+                                <input type="text" class="form-control col-md-12" value="@Model.empleados.ConcatNombre" readonly>
+                            </div>
+                        </div>
+                        <div class="ln_solid"></div>
+                        <div class="form-group row">
+                            <span style="color:black"><b>COMENTARIOS</b></span>
+                        </div>
+                        <div class="item form-group">
+                            @Html.LabelFor(model => model.comentarios, new { @class = "control-label col-md-12 col-sm-12", @style = "text-align: left" })
+
+                        </div>
+                        <div class="item form-group">
+                            <div class="col-md-12">
+                                @Html.TextAreaFor(model => model.comentarios, new { @class = "form-control", @rows = "4", @autocomplete = "off", @readonly = "readonly" })
+                            </div>
+
+                        </div>
+
+
+
+                        @if (Model.estatus == Bitacoras.Util.PFA_Status.ENVIADO && !String.IsNullOrEmpty(Model.razon_rechazo))
+                        {
+                            <div class="ln_solid"></div>
+                            <div class="form-group row">
+                                <span style="color:black"><b>RAZ&Oacute;N ANTERIOR DE RECHAZO</b></span>
+                            </div>
+
+                            <div class="item form-group">
+                                <div class="col-md-12">
+                                    @Html.TextAreaFor(model => model.razon_rechazo, new { @class = "form-control", @rows = "4", @autocomplete = "off", @readonly = "readonly" })
+                                </div>
+
+                            </div>
+                        }
+
                     </div>
-                    <div class="col-md-12">
-                        <p class="float-md-right">
-                            <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = Model.id})" class="btn btn-success btm-sm" title="Editar">
-                                <i class="fa fa-pencil-square-o"></i> Editar
-                            </a>
-                        </p>
-                    </div>
+
                 </div>
                 <div>
                     <br />
-                    <a href="@Url.Action("Index", ViewBag.ControllerName)" class="btn btn-round btn-info btm-sm" title="Volver">
-                        <i class="fa fa-arrow-circle-left"></i> Volver al listado
+                    <a href="javascript: history.go(-1)" class="btn btn-round btn-info btm-sm" title="Volver">
+                        <i class="fa fa-arrow-circle-left"></i> Volver
                     </a>
                 </div>
             </div>
@@ -113,7 +269,7 @@
         //agranda el tamaño de la barra
         window.onload = function () {
             document.getElementById('menu_toggle').click();
-            
+
         }
     </script>
 
