--- a/CódigoFuente/BitacorasProduccion/Views/PremiumFreightApproval/ListadoSolicitudes.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PremiumFreightApproval/ListadoSolicitudes.cshtml
@@ -55,10 +55,14 @@
                             <div class="col-sm-12">
                                 <div class="card-box">
                                     <div class="form-group">
+                                        @if (ViewBag.Create != null && ViewBag.Create)
+                                        {
                                         <a href="@Url.Action( "Create", ViewBag.ControllerName)" class="btn btn-success">
                                             <i class="fa fa-plus-square"></i>
                                             Crear nuevo
                                         </a>
+                                        }
+                                        
                                     </div>
                                     <table id="datatable_1" class="table table-striped table-bordered nowrap" cellspacing="0" width="100%">
                                         <thead>
@@ -66,6 +70,9 @@
                                                 <th>Acciones</th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.id)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.date_request)
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.id_solicitante)
@@ -86,7 +93,7 @@
                                                     @Html.DisplayNameFor(model => model.total_cost)
                                                 </th>
                                                 <th>
-                                                    Total Coast To Recover
+                                                    Total Cost To Recover
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.id_PFA_recovered_cost)
@@ -126,9 +133,12 @@
                                                             <i class="fa fa-check-square-o"></i>
                                                         </a>
                                                     }
-                                                    </td>
+                                                </td>
                                                 <td>
                                                     @Html.DisplayFor(modelItem => item.id)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.date_request)
                                                 </td>
                                                 <td>
                                                     @Html.DisplayFor(modelItem => item.empleados1.ConcatNombre)
@@ -143,13 +153,13 @@
                                                     @Html.DisplayFor(modelItem => item.PFA_Responsible_cost.descripcion)
                                                 </td>
                                                 <td>
-                                                    @Html.DisplayFor(modelItem => item.total_pf_cost)
+                                                    @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.total_pf_cost)
                                                 </td>
                                                 <td>
-                                                    @Html.DisplayFor(modelItem => item.total_cost)
+                                                    @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.total_cost)
                                                 </td>
                                                 <td>
-                                                    @item.TotalCostToRecover
+                                                    @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.TotalCostToRecover)
                                                 </td>
                                                 <td>
                                                     @Html.DisplayFor(modelItem => item.PFA_Recovered_cost.descripcion)
