--- a/CódigoFuente/BitacorasProduccion/Views/PremiumFreightApproval/Send.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PremiumFreightApproval/Send.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Portal_2_0.Models.PFA
 
-@{    
+@{
     ViewBag.Title = " Send Request Premium Freight Approval";
     ViewBag.PrimerNivel = "PFA";
     ViewBag.SegundoNivel = "PFA_registro";
@@ -61,7 +61,7 @@
                                         <td>@Html.DisplayFor(model => model.total_cost)</td>
                                     </tr>
                                     <tr>
-                                        <th>Total Coast To Recover</th>
+                                        <th>Total Cost To Recover</th>
                                         <td>@Model.TotalCostToRecover</td>
                                     </tr>
                                     <tr>
@@ -100,11 +100,24 @@
                 </div>
                 <div>
                     <br />
-                    <a href="@Url.Action("Index", ViewBag.ControllerName)" class="btn btn-round btn-info btm-sm" title="Volver">
-                        <i class="fa fa-arrow-circle-left"></i> Volver al listado
+                    <a href="javascript: history.go(-1)" class="btn btn-round btn-info btm-sm" title="Volver">
+                        <i class="fa fa-arrow-circle-left"></i> Volver
                     </a>
                 </div>
             </div>
         </div>
     </div>
 </div>
+@section scripts
+{
+
+    <script>
+        
+        window.onload = function () {
+            //Hace que se despliege el menú
+            document.getElementById('menu_toggle').click();
+            document.getElementById('menu_toggle').click();
+        }
+    </script>
+
+}
