--- a/CódigoFuente/BitacorasProduccion/Views/PremiumFreightApproval/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PremiumFreightApproval/Create.cshtml
@@ -198,7 +198,14 @@
                                     @Html.EditorFor(m => m.promise_recovering_date, new { htmlAttributes = new { @class = "form-control" } })
                                     @Html.ValidationMessageFor(model => model.promise_recovering_date, "", new { @class = "text-danger" })
                                 </div>
+                                @Html.LabelFor(model => model.credit_debit_note_number, new { @class = "control-label col-md-1" })
+                                <div class="col-md-3">
+                                    @Html.EditorFor(m => m.credit_debit_note_number, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                    @Html.ValidationMessageFor(model => model.credit_debit_note_number, "", new { @class = "text-danger" })
+                                </div>
                             </div>
+
+
 
                             <div class="ln_solid"></div>
                             <div class="form-group row">
