--- a/CódigoFuente/BitacorasProduccion/Views/PremiumFreightApproval/ReportesPFA.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PremiumFreightApproval/ReportesPFA.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<Portal_2_0.Models.PFA>
-
+@using Clases.Util;
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Premium Freight Approval";
@@ -36,6 +36,11 @@
     if (paginacionFiltros.ValoresQueryString["fecha_final"] != null)
     {
         filtroFechaFinal = paginacionFiltros.ValoresQueryString["fecha_final"].ToString();
+    }
+    string status = string.Empty;
+    if (paginacionFiltros.ValoresQueryString["status"] != null)
+    {
+        filtroFechaFinal = paginacionFiltros.ValoresQueryString["status"].ToString();
     }
 
 }
@@ -107,6 +112,11 @@
                                                 <div class="col-md-3 col-sm-3 ">
                                                     @Html.DropDownList("id_PFA_user", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
                                                 </div>
+
+                                                <label class="control-label col-md-2 col-sm-2" for="id_PFA_responsible_cost" style="text-align:right">Estado Solicitud</label>
+                                                <div class="col-md-3 col-sm-3 ">
+                                                    @Html.DropDownList("status", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                                </div>
                                             </div>
 
 
@@ -141,9 +151,14 @@
                                         <table id="datatable_1" class="table table-striped table-bordered nowrap" cellspacing="0" width="100%">
                                             <thead>
                                                 <tr>
-
+                                                    <th>
+                                                        Acciones
+                                                    </th>
                                                     <th>
                                                         @Html.DisplayNameFor(model => model.id)
+                                                    </th>
+                                                    <th>
+                                                        Status
                                                     </th>
                                                     <th>
                                                         @Html.DisplayNameFor(model => model.date_request)
@@ -175,50 +190,69 @@
                                                     <th>
                                                         @Html.DisplayNameFor(model => model.promise_recovering_date)
                                                     </th>
+                                                    <th>
+                                                        @Html.DisplayNameFor(model => model.credit_debit_note_number)
+                                                    </th>
 
                                                 </tr>
                                             </thead>
                                             <tbody>
                                                 @foreach (var item in Model)
                                                 {
-                                                <tr>
-
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.id)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.date_request)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.empleados1.ConcatNombre)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.PFA_Reason.descripcion)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.PFA_Type_shipment.descripcion)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.PFA_Responsible_cost.descripcion)
-                                                    </td>
-                                                    <td>
-                                                        @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.total_pf_cost)
-                                                    </td>
-                                                    <td>
-                                                        @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.total_cost)
-                                                    </td>
-                                                    <td>
-                                                        @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.TotalCostToRecover)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.PFA_Recovered_cost.descripcion)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.promise_recovering_date)
-                                                    </td>
-
-                                                </tr>
-                                                }
+                                                    <tr>
+                                                        <td>
+                                                            <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id })" class="btn btn-secondary btm-sm" title="Detalles">
+                                                                <i class="fa fa-info-circle"></i>
+                                                            </a>
+                                                            @if (User.IsInRole(TipoRoles.PFA_AUTORIZACION) && item.estatus == Bitacoras.Util.PFA_Status.APROBADO)
+                                                            {
+                                                                <a href="@Url.Action("EditCreditNote", ViewBag.ControllerName, new { id = item.id })" class="btn btn-success btm-sm" title="Edit Credit Note">
+                                                                    <i class="fa fa-credit-card"></i>
+                                                                </a>
+                                                            }
+                                                            </td>
+                                                        
+                                                            <td>
+                                                                @Html.DisplayFor(modelItem => item.id)
+                                                            </td>
+                                                            <td>
+                                                                @Html.DisplayFor(modelItem => item.estatus)
+                                                            </td>
+                                                            <td>
+                                                                @Html.DisplayFor(modelItem => item.date_request)
+                                                            </td>
+                                                            <td>
+                                                                @Html.DisplayFor(modelItem => item.empleados1.ConcatNombre)
+                                                            </td>
+                                                            <td>
+                                                                @Html.DisplayFor(modelItem => item.PFA_Reason.descripcion)
+                                                            </td>
+                                                            <td>
+                                                                @Html.DisplayFor(modelItem => item.PFA_Type_shipment.descripcion)
+                                                            </td>
+                                                            <td>
+                                                                @Html.DisplayFor(modelItem => item.PFA_Responsible_cost.descripcion)
+                                                            </td>
+                                                            <td>
+                                                                @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.total_pf_cost)
+                                                            </td>
+                                                            <td>
+                                                                @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.total_cost)
+                                                            </td>
+                                                            <td>
+                                                                @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.TotalCostToRecover)
+                                                            </td>
+                                                            <td>
+                                                                @Html.DisplayFor(modelItem => item.PFA_Recovered_cost.descripcion)
+                                                            </td>
+                                                            <td>
+                                                                @Html.DisplayFor(modelItem => item.promise_recovering_date)
+                                                            </td>
+                                                            <td>
+                                                                @Html.DisplayFor(modelItem => item.credit_debit_note_number)
+                                                            </td>
+                                                        </tr>
+                                                    }
 
                                             </tbody>
                                         </table>
